# persistent-cache

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
examples/: advanced_usage.py  basic_usage.py
src/persistent_cache/: __init__.py  core.py  exceptions.py  serializers.py
tests/: conftest.py  test_core.py  test_serializers.py
