# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true

[project]
name = "persistent_cache"
version = "0.1.1"
description = "A Python package for persistent function result caching"
authors = [{ name = "Namuan", email = "namuan@deskriders.dev" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/namuan/persistent_cache"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=2.0",
]
